[gd_scene load_steps=10 format=2]

[ext_resource path="res://Script/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Resource/Fonts/TextFontHeader.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resource/Fonts/ButtonStyle.tres" type="Theme" id=3]
[ext_resource path="res://Resource/Fonts/Fifaks10Dev1.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scene/FavBlock.tscn" type="PackedScene" id=5]
[ext_resource path="res://Resource/Fonts/TextBlockFileData.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scene/AuthBlock.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 6 )
Button/fonts/font = ExtResource( 6 )
Fonts/fonts/large = ExtResource( 6 )
Fonts/fonts/normal = ExtResource( 6 )
Label/fonts/font = ExtResource( 6 )
LineEdit/fonts/font = ExtResource( 6 )
OptionButton/fonts/font = ExtResource( 6 )
Tree/fonts/font = ExtResource( 6 )
WindowDialog/fonts/title_font = ExtResource( 6 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Version" type="Label" parent="."]
margin_right = 256.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Version: "

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -274.0
margin_top = 27.0
margin_right = 260.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Grise"
align = 1
valign = 1

[node name="OpenBtn" type="Button" parent="."]
anchor_left = 0.0546875
anchor_top = 0.568333
anchor_right = 0.201172
anchor_bottom = 0.618333
theme = ExtResource( 3 )
text = "Открыть"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ConfigBtn" type="Button" parent="."]
anchor_left = 0.0546875
anchor_top = 0.633333
anchor_right = 0.201172
anchor_bottom = 0.683333
theme = ExtResource( 3 )
text = "Конфигуратор"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SeachBtn" type="Button" parent="."]
anchor_left = 0.0546875
anchor_top = 0.506667
anchor_right = 0.201172
anchor_bottom = 0.556667
margin_top = 3.05176e-05
theme = ExtResource( 3 )
text = "Найти"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AccessBtn" type="Button" parent="."]
anchor_left = 0.0546875
anchor_top = 0.765
anchor_right = 0.201172
anchor_bottom = 0.815
margin_top = 3.05176e-05
theme = ExtResource( 3 )
text = "Доступы"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FavoritesBtn" type="Button" parent="."]
anchor_left = 0.0546875
anchor_top = 0.7
anchor_right = 0.201172
anchor_bottom = 0.75
margin_top = -3.05176e-05
margin_bottom = 3.05176e-05
theme = ExtResource( 3 )
text = "Избранное"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ExitBtn" type="Button" parent="."]
anchor_left = 0.0546875
anchor_top = 0.83
anchor_right = 0.201172
anchor_bottom = 0.88
theme = ExtResource( 3 )
text = "Выход из системы"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FavBlock" parent="." instance=ExtResource( 5 )]
anchor_left = 0.246094
anchor_top = 0.226667
anchor_right = 0.699219
anchor_bottom = 0.88

[node name="AuthBlock" parent="." instance=ExtResource( 7 )]
anchor_left = 0.744141
anchor_top = 0.226667
anchor_right = 0.947266
anchor_bottom = 0.88

[node name="FileDialog" type="FileDialog" parent="."]
margin_top = 4.0
margin_right = 794.0
margin_bottom = 480.0
theme = SubResource( 2 )
popup_exclusive = true
window_title = "Открыть файл"
dialog_text = "Выберите файл для просмотра"
dialog_autowrap = true
mode = 0
access = 2
filters = PoolStringArray( "*.rmdata" )
show_hidden_files = true

[connection signal="pressed" from="OpenBtn" to="." method="_on_OpenBtn_pressed"]
[connection signal="pressed" from="ConfigBtn" to="." method="_on_ConfigBtn_pressed"]
[connection signal="pressed" from="SeachBtn" to="." method="_on_SeachBtn_pressed"]
[connection signal="pressed" from="AccessBtn" to="." method="_on_AccessBtn_pressed"]
[connection signal="pressed" from="FavoritesBtn" to="." method="_on_FavoritesBtn_pressed"]
[connection signal="pressed" from="ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
